--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "canvas-sketch": "^0.7.4",
     "canvas-sketch-util": "^1.10.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.3.2"
   }
 }
